chore: update semantic-release config
See https://github.com/semantic-release/github\?tab\=readme-ov-file\#successCommentCondition

--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
       [
         "@semantic-release/github",
         {
-          "successComment": false,
+          "successCommentCondition": false,
           "failTitle": false
         }
       ]
